smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/traits-on-apply.smithy
// Parse error at line 4, column 1 near `deprecated`: Traits cannot be applied to `apply`
namespace com.foo

@deprecated
apply Foo @deprecated
